# PulseMDL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: preview.yml  release.yml
dmxconvert/: dmxconvert.cpp
docs/: attachmentbyverts.md  bodygroup-model.md  collision-autogen.md  conditionals.md  deltaproportions.md  lod-system.md  modelbudget.md  procedural-bones.md  rendermesh.md  rotatebone-movebone.md  staticproppose.md  staticproppose.txt  transformbindposebone.md
include/: studio.h
include/common/: scriplib.h
include/mdlobjects/: dmejigglebone.h  dmeproceduralbone.h  mdlobjects.cpp
include/movieobjects/: dmecombinationoperator.h
include/studiomdl/: convexdecompose.h  optimize.h  studiomdl.h
include/tier1/: refcount.h
libs/mdlobjects/: dmejigglebone.cpp  dmeproceduralbone.cpp
libs/meshoptimizer/: CMakeLists.txt
libs/minicollision/: CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  MiniVPhysics.h  PhysicsCollision.cpp  PhysicsCollisionImpl.h  PhysicsSurfaceProps.cpp  ivp_compact.h
libs/movieobjects/: dmecombinationoperator.cpp
libs/utils/: scriplib.cpp
libs/vhacd/: CMakeLists.txt  LICENSE  vhacd_hull.h  vhacd_impl.cpp
studiomdl/: UnifyLODs.cpp  collisionmodel.cpp  collisionmodelsource.cpp  convexdecompose.cpp  dmxsupport.cpp  filesystem_init.cpp  mrmsupport.cpp  optimize.cpp  perfstats.cpp  simplify.cpp  studiomdl.cpp  studiomdl_app.cpp  studiomdl_commands.cpp  studiomdl_commands.h  studiomdl_errors.cpp  studiomdl_errors.h  v1support.cpp  write.cpp
